css/style.css
@keyframes fade-in {
  from { opacity: 0; }
  to   { opacity: 1; }
}

@keyframes slide-up {
  from { transform: translateY(100%); }
  to { transform: translateY(0); }
}

* {
  box-sizing: border-box;
}

.clearfix:after{
  content:"";
  display:block;
  clear:both;
}

.hidden, [v-cloak] {
  display: none;
}

.flex-center {
  display: flex;
  align-items: center;
  height: 100%;
}

hr {
  background: #132027;
  height: 1px;
  border: none;
  margin: 20px;
}

html, body {
  margin: 0;
  padding: 0;
}

body {
  color: #fff;
  background-color: #182931;
  font-family: Helvetica, Arial, sans-serif;
  font-size: 20px;
  line-height: 1.5;
  text-align: center;
  padding-bottom: 250px;
}

a {
  color: #ffdc99;
  font-weight: bold;
}

button:hover {
  cursor: pointer;
}

.container,
form.stuck .fields {
  width: 750px;
  margin: auto;
  max-width: 96%;
}

#header {
  max-width: 900px;
  padding-top: 40px;
  margin: auto;
  background: #182931;
}

#header h1 {
  margin-top: 0;
}

h1 {
  font-size: 100px;
  line-height: 1.1;
  position: relative;
  margin-bottom: 0;
  padding-bottom: 10px;
}

h1:after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  box-shadow: inset 0 0 100px #182931;
}

h2 {
  font-size: 60px;
  font-weight: normal;
}

h3 {
  font-size: 32px;
  margin-bottom: 20px;
}

h3.lighter {
  font-weight: normal;
}

p {
  color: #b4c6cf;
}

.form-wrapper {
  height: 200px;
}

form {
  background-color: #213a46;
  padding: 20px;
  border-radius: 5px;
  border: 1px solid #213a46;
  box-shadow: 0px 39px 67px -4px rgba(13, 22, 26, 0.41);
}

form .row {
  display: flex;
}

form .row .column {
  flex: 1;
  margin: 5px;
}

form input[type="text"],
form input[type="email"],
form input[type="tel"],
form button {
  color: #333;
  font-weight: bold;
  border: none;
  border-radius: 5px;
  padding: 15px 20px;
  font-size: 18px;
  width: 100%;
}

form input[type="checkbox"] {
  transform: scale(1.2);
}

form input::placeholder {
  color: #767676;
  text-transform: uppercase;
}

form button {
  background-color: #ff2626;
  color: #fff;
  text-transform: uppercase;
}

form small {
  display: block;
}

form .disclaimer {
  margin-top: 4px;
  font-size: 15px;
  color: #93a5ae;
  display: block;
}

form .disclaimer a {
  color: #b9d2df;
}

form.stuck {
  z-index: 1983;
  animation: slide-up .3s;
  animation-fill-mode: forwards;
  position: fixed;
  bottom: 0;
  left: 0;
  height: 130px;
  right: 0;
  border: none;
  border-top: 1px #111 solid;
  border-radius: 0;
}

form.stuck .fields {
  display: flex;
}

form.stuck .fields .row {
  flex: 2;
}

form.stuck .fields .row:last-child {
  flex: 1;
}

form .error {
  color: #ff2626;
  font-weight: bold;
  margin: 10px 0;
}

#faq {
  margin-top: 50px;
}

#faq h2 {
  margin-top: 0;
}

.line-bg {
  background-image: url('../images/dissolved-line.png');
  background-size: 45px 100%;
  background-repeat: repeat-y;
  background-position: center;
}

#companies .column {
  width: 50%;
  float: left;
}

#companies .column ul {
  margin: 0;
  padding: 0;
}

#companies .column ul li {
  list-style-type: none;
  font-size: 16px;
  margin-bottom: 20px;
}

.pledge {
  background-color: #223944;
  padding: 20px 40px;
  border-radius: 15px;
  text-align: left;
}

.pledge h4 {
  margin: 40px 0 0;
  display: flex;
  align-items: center;
  height: 100%;
  line-height: 1.2;
  margin-left: -5px;
}

.pledge h4:first-child {
  margin-top: 20px;
}

.pledge h4 b {
  border-radius: 100%;
  width: 32px;
  height: 32px;
  font-size: 20px;
  line-height: 32px;
  color: #b5d8e8;
  background-color: #2f4a57;
  margin-right: 10px;
  text-align: center;
  display: inline-block;
  font-weight: normal;
}

.pledge h4 span {
  flex: 5;
}

.social {
  margin: 60px 10px 120px;
}

.social .share-button {
  min-width: 136px;
}

.share-button {
  border-radius: 5px;
  color: #fff;
  display: inline-block;
  font-size: 14px;
  font-weight: 400;
  padding: 10px 22px;
  margin: 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: box-shadow 200ms ease-in-out;
  background-repeat: no-repeat;
  padding-left: 36px;
  background-size: auto 30px;
  background-position: 5px center;
}

.share-button:hover {
  box-shadow: inset 0 0 100px 100px rgba(0, 0, 0, 0.2);
}

.share-button.facebook {
  background-color: #3c5a96;
  background-image: url(../images/facebook_white.svg);
}

.share-button.twitter {
  background-color: #59adeb;
  background-image: url(../images/twitter_white.svg);
}

.share-button.donate {
  background-color: #FC3660;
  background-image: url('../images/share/donate.png');
  background-size: auto 18px;
  background-position: 12px center;
}

.organizations {
  margin-bottom: 120px;
}

.organizations img {
  filter: contrast(50%) brightness(120%) grayscale(100%);
  width: 160px;
  height: 80px;
  object-fit: contain;
  margin: 10px;
}

.credits p {
  font-variant: small-caps;
  text-transform: uppercase;
  margin-bottom: 8px;
}

.credits img {
  width: 250px;
  height: 50px;
  object-fit: contain;
  margin: 0 10px;
}

.social-sidebar {
  position: fixed;
  top: 350px;
  left: 0;
  transform: translateX(-100%);
  transition: transform .3s;
}

.social-sidebar.visible {
  transform: translateX(0);
}

.social-sidebar a {
  display: block;
  width: 50px;
  height: 50px;
  border-radius: 0 4px 4px 0;
}

.social-sidebar a.twitter {
  background-color: #59adeb;
}

.social-sidebar a.facebook {
  background-color: #3c5a96;
  margin-top: 10px;
}

body.modal-open {
  overflow: hidden;
}

.modal-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.75);
  overflow: auto;
  animation: fade-in .2s;
  z-index: 1984;
}

.modal {
  width: 600px;
  max-width: 100%;
  margin: auto;
  position: relative;
  background-color: #182931;
  border-radius: 8px;
  padding-bottom: 20px;
}

.modal h1 {
  font-size: 72px;
}

.modal h1:after {
  box-shadow: inset 0 0 72px #182931;
}

.modal .close {
  position: absolute;
  right: 8px;
  top: 0;
  font-size: 28px;
  text-decoration: none;
  background-color: transparent;
  color: #fff;
  border: none;
}

@media screen and (max-width: 800px) {
  h1 {
    font-size: 80px;
  }
}

@media screen and (max-width: 640px) {
  body {
    font-size: 18px;
  }

  h1, .modal h1 {
    font-size: 40px;
  }

  h1:after, .modal h1:after {
    box-shadow: inset 0 0 40px #182931;
  }

  h2 {
    font-size: 36px;
  }

  h3 {
    line-height: 1.2;
    font-size: 28px;
  }

  #header {
    padding-top: 20px;
  }

  #header p {
    margin-top: 0;
  }

  .social-sidebar {
    display: none;
  }

  form {
    width: 102%;
    margin-left: -1%;
    padding: 10px;
  }

  form input {
    padding-left: 5px;
    padding-right: 5px;
  }

  form input {
    font-size: 14px;
  }

  form.stuck {
    height: 190px;
  }

  form.stuck .fields {
    display: block;
  }

  form.stuck .disclaimer {
    font-size: 14px;
    margin-top: 2px;
  }

  .pledge {
    padding: 10px 15px;
  }

  .line-bg {
    background-size: 22px 100%;
  }

  #companies .column {
    padding: 0 15px;
  }

  .organizations img {
    width: 100px;
    height: 50px;
    margin: 5px;
  }

  .credits img {
    width: 150px;
    height: 35px;
  }
}

@media screen and (max-width: 320px) {
  body {
    font-size: 16px;
  }

  h1, .modal h1 {
    font-size: 30px;
  }

  h1:after, .modal h1:after {
    box-shadow: inset 0 0 30px #182931;
  }

  form {
    padding: 10px 5px;
  }
}

